force-app/main/default/objects/Account/fields/Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Notes__c</fullName>
    <label>Account Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>