force-app/main/default/objects/Account/fields/Account_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Onboarding_Status__c</fullName>
    <description>Lender Partnerships account status field</description>
    <label>Account Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Opportunity</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>