force-app/main/default/objects/Account/fields/Actuals__c.field-meta.xml
<CustomField>
    <fullName>Actuals__c</fullName>
    <description>not used</description>
    <label>Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>