force-app/main/default/objects/Account/fields/Any_changes_that_can_impact_renewal__c.field-meta.xml
<CustomField>
    <fullName>Any_changes_that_can_impact_renewal__c</fullName>
    <description>Not Used</description>
    <label>Any changes that can impact renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>