force-app/main/default/objects/Account/fields/Applicant_Type_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type_From_Lead__c</fullName>
    <description>This field will be used to update the Account Record Type when a Lead is converted.</description>
    <label>Applicant Type From Lead</label>
    <length>30</length>
    <type>Text</type>
</CustomField>