force-app/main/default/objects/Account/fields/Approval_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiration_Date__c</fullName>
    <label>Approval Expiration Date</label>
    <type>Date</type>
</CustomField>