force-app/main/default/objects/Account/fields/Approved_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Line_Amount__c</fullName>
    <description>Not Used</description>
    <label>Approved Line Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>