force-app/main/default/objects/Account/fields/Approved_States__c.field-meta.xml
<CustomField>
    <fullName>Approved_States__c</fullName>
    <description>Not Used</description>
    <label>Approved States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>