force-app/main/default/objects/Account/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <description>Batch Name example: “Batch 2- Andy List”. Used for Market Intelligence.</description>
    <inlineHelpText>Used for Market Intelligence to track Batch File Upserts.</inlineHelpText>
    <label>Batch Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>