force-app/main/default/objects/Account/fields/Borrowed_on_Bridge_Loans__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_on_Bridge_Loans__c</fullName>
    <inlineHelpText>Total amount borrowed through Bridge and Single Asset Bridge Loans</inlineHelpText>
    <label>Borrowed on Bridge Loans</label>
    <summarizedField>Opportunity.Aggregate_Funding__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Expired, Matured, Paid Off, Sold</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Bridge Loan, SAB Loan</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>