force-app/main/default/objects/Account/fields/Borrowed_on_CRE_SAB_Loans__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_on_CRE_SAB_Loans__c</fullName>
    <description>Total amount borrowed through Single Asset Bridge, Commercial and Build to Rent</description>
    <inlineHelpText>Total amount borrowed through Single Asset Bridge, Commercial and Build to Rent</inlineHelpText>
    <label>Borrowed on CRE/SAB Loans</label>
    <summarizedField>Opportunity.Aggregate_Funding__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.LOC_Loan_Type__c</field>
        <operation>equals</operation>
        <value>Single Asset (1-4 Unit), Single Asset (5-10 Unit), Multifamily/CRE, Build to Rent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Expired, Matured, Paid Off, Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>