force-app/main/default/objects/Account/fields/Borrowed_on_Single_Rental_Loans__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_on_Single_Rental_Loans__c</fullName>
    <description>Total amount borrowed on CoreVest sourced Single Rental Loans</description>
    <inlineHelpText>Total amount borrowed on CoreVest sourced Single Rental Loans</inlineHelpText>
    <label>Borrowed on Single Rental Loans</label>
    <summarizedField>Opportunity.Final_Loan_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Expired, Matured, Paid Off</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Single Rental Loan</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Lender__c</field>
        <operation>contains</operation>
        <value>CoreVest</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>