force-app/main/default/objects/Account/fields/Borrowed_on_Term_Loans__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_on_Term_Loans__c</fullName>
    <inlineHelpText>Total amount borrowed through Term Loans</inlineHelpText>
    <label>Borrowed on Term Loans</label>
    <summarizedField>Opportunity.Final_Loan_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Expired, Matured, Paid Off, Sold</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Term Loan</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>