force-app/main/default/objects/Account/fields/Borrower_Status__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Status__c</fullName>
    <label>Borrower Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Borrower</fullName>
            </value>
            <value>
                <fullName>Committee Approved</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Termsheet Signed</fullName>
                <default>true</default>
                <label>Termsheet Signed</label>
            </value>
            <value>
                <fullName>Termsheet Sent</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>