force-app/main/default/objects/Account/fields/Bridge_AMA_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_AMA_Executed_Date__c</fullName>
    <description>Asset Management Agreement Executed Date</description>
    <inlineHelpText>Asset Management Agreement Executed Date</inlineHelpText>
    <label>Bridge - AMA Executed Date</label>
    <type>Date</type>
</CustomField>