force-app/main/default/objects/Account/fields/Bridge_AMA_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_AMA_Sent_Date__c</fullName>
    <description>Asset Management Agreement Sent Date</description>
    <inlineHelpText>Asset Management Agreement Sent Date</inlineHelpText>
    <label>Bridge - AMA Sent Date</label>
    <type>Date</type>
</CustomField>