force-app/main/default/objects/Account/fields/Bridge_Guidelines_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Guidelines_Approved_Date__c</fullName>
    <description>Lender Partnerships field</description>
    <label>Bridge - Guidelines Approved Date</label>
    <type>Date</type>
</CustomField>