force-app/main/default/objects/Account/fields/Bridge_Loan_Docs_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Loan_Docs_Approved_Date__c</fullName>
    <description>Date the loans docs are approved</description>
    <label>Bridge - Loan Docs Approved Date</label>
    <type>Date</type>
</CustomField>