force-app/main/default/objects/Account/fields/Bridge_Loan_Docs_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Loan_Docs_Received_Date__c</fullName>
    <description>Date the loan docs are received</description>
    <label>Bridge - Loan Docs Received Date</label>
    <type>Date</type>
</CustomField>