force-app/main/default/objects/Account/fields/Bridge_MLPA_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_MLPA_Executed_Date__c</fullName>
    <description>Mortgage Loan Purchase Agreement Executed Date for Bridge</description>
    <inlineHelpText>Mortgage Loan Purchase Agreement Executed Date for Bridge</inlineHelpText>
    <label>Bridge - MLPA Executed Date</label>
    <type>Date</type>
</CustomField>