force-app/main/default/objects/Account/fields/Bridge_Monthly_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Monthly_of_Units__c</fullName>
    <formula>Bridge_Monthly_Units__c / Total_Monthly_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bridge - Monthly % of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>