force-app/main/default/objects/Account/fields/Broker_Approved__c.field-meta.xml
<CustomField>
    <fullName>Broker_Approved__c</fullName>
    <label>Broker Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>