force-app/main/default/objects/Account/fields/Broker_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Status__c</fullName>
    <description>- Prospect (Initial lead)
- In Discussion (expressed interest, in communication)
- Application Out (app out pending counterparty)
- Pending Docs (we are waiting for action from counter party)
- Pending Review (action needed by CoreVest)
- Approved (application has been approved, waiting for onboarding)
- Active (counterparty has been onboarded and is active)
- Inactive (previously active counterparty but is currently not delivering loans into program)
- Hold (counterparty was in process but we have decided to put on hold)
- Declined (decline for lack of references, low net worth, Broker may reapply in future)
- Withdrawn (counter party decided not pursue application with us)
- Terminated (indicates terminate for lack of references, low net worth, Broker may reapply in future
- Watch List (Exception on approval.  Did not meet all criteria, however had compensating factors.  Review every 6 months for performance and updated qualifications)</description>
    <label>Broker Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Application Out</fullName>
            </value>
            <value>
                <fullName>Pending Docs</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Watch List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>