force-app/main/default/objects/Account/fields/Business_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_ID__c</fullName>
    <label>Business Tax ID / EIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>