force-app/main/default/objects/Account/fields/CAF_Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>CAF_Accounting_Code__c</fullName>
    <label>CAF Accounting Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>