force-app/main/default/objects/Account/fields/CAF_Originator_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>CAF_Originator_Assignment_Date__c</fullName>
    <label>CAF Originator Assignment Date</label>
    <type>Date</type>
</CustomField>