force-app/main/default/objects/Account/fields/Clear_background_checks__c.field-meta.xml
<CustomField>
    <fullName>Clear_background_checks__c</fullName>
    <label>Clear background checks?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>