force-app/main/default/objects/Account/fields/Clear_OFAC__c.field-meta.xml
<CustomField>
    <fullName>Clear_OFAC__c</fullName>
    <label>Clear OFAC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>