force-app/main/default/objects/Account/fields/Client_ID_COR__c.field-meta.xml
<CustomField>
    <fullName>Client_ID_COR__c</fullName>
    <displayFormat>COL{000}</displayFormat>
    <label>Client ID</label>
    <type>AutoNumber</type>
</CustomField>