force-app/main/default/objects/Account/fields/Company_Name_DBA__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_DBA__c</fullName>
    <label>Company Name / DBA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>