force-app/main/default/objects/Account/fields/Company_NMLS_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_NMLS_ID__c</fullName>
    <description>Nationwide Mortgage Licensing System Identifier</description>
    <inlineHelpText>Nationwide Mortgage Licensing System Identifier</inlineHelpText>
    <label>Company NMLS ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>