force-app/main/default/objects/Account/fields/Completed_Trade_Deals__c.field-meta.xml
<CustomField>
    <fullName>Completed_Trade_Deals__c</fullName>
    <description>Not Used</description>
    <label>Completed Trade Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>