force-app/main/default/objects/Account/fields/Conference_Year__c.field-meta.xml
<CustomField>
    <fullName>Conference_Year__c</fullName>
    <label>Conference Year</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Introduction_Subsource__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>