force-app/main/default/objects/Account/fields/Correspondent_Interest_Strip__c.field-meta.xml
<CustomField>
    <fullName>Correspondent_Interest_Strip__c</fullName>
    <label>Correspondent Interest Strip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>