force-app/main/default/objects/Account/fields/Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report__c</fullName>
    <description>Not Used</description>
    <label>Credit Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>