force-app/main/default/objects/Account/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Wilmington Trust</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>