force-app/main/default/objects/Account/fields/Date_of_Cert_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Cert_of_Good_Standing__c</fullName>
    <label>Date of Cert of Good Standing</label>
    <type>Date</type>
</CustomField>