force-app/main/default/objects/Account/fields/Deals_Won__c.field-meta.xml
<CustomField>
    <fullName>Deals_Won__c</fullName>
    <description>Count of Deals Won</description>
    <inlineHelpText>Count of Deals Won</inlineHelpText>
    <label>Deals Won</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Expired, Matured, Paid Off, Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>