force-app/main/default/objects/Account/fields/Do_Not_Lend__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Lend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this Account has been identified as a Borrower we do not want to lend to.  The Notes tab may have details regarding the reason.</inlineHelpText>
    <label>Do Not Lend</label>
    <type>Checkbox</type>
</CustomField>