force-app/main/default/objects/Account/fields/Do_you_sell_Loans_to_this_Company__c.field-meta.xml
<CustomField>
    <fullName>Do_you_sell_Loans_to_this_Company__c</fullName>
    <label>Do you sell Loans to this Company?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>