force-app/main/default/objects/Account/fields/DSCR_UW_Guidelines_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>DSCR_UW_Guidelines_Approved_Date__c</fullName>
    <label>DSCR - UW Guidelines Approved Date</label>
    <type>Date</type>
</CustomField>