force-app/main/default/objects/Account/fields/DSCR_UW_Guidelines_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>DSCR_UW_Guidelines_Received_Date__c</fullName>
    <description>Lender Partnerships field</description>
    <label>DSCR -  UW Guidelines Received Date</label>
    <type>Date</type>
</CustomField>